@@ -92,6 +92,7 @@ let theories_dirs_map = [
 let init_load_path () =
   let coqlib = Envars.coqlib () in
   let user_contrib = coqlib/"user-contrib" in
+  let coqpath = Envars.coqpath () in
   let dirs = ["states";"plugins"] in
     (* NOTE: These directories are searched from last to first *)
     (* first, developer specific directory to open *)
@@ -105,6 +106,8 @@ let init_load_path () =
     (* then user-contrib *)
     if Sys.file_exists user_contrib then
       Mltop.add_rec_path ~unix_path:user_contrib ~coq_root:Nameops.default_root_prefix;
+    (* then directories in COQPATH *)
+    List.iter (fun s -> Mltop.add_rec_path ~unix_path:s ~coq_root:Nameops.default_root_prefix) coqpath;
     (* then current directory *)
     Mltop.add_path ~unix_path:"." ~coq_root:Nameops.default_root_prefix;
     (* additional loadpath, given with -I -include -R options *)
